test/Fail/Issue6476.err
Issue6476.agda:18.8-12: error: [UnequalTerms]
The terms
  0
and
  1
are not equal at type Nat
when checking that the expression refl has type 0 0 ≡ 1 1
